--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,17 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.8.RELEASE</version>
     </parent>
+    <profiles>
+<profile>
+<id>sonar</id>
+<properties>
+<!-- Optional URL to server. Default value is http://localhost:9000 -->
+<sonar.host.url>
+http://18.216.6.214:9000
+</sonar.host.url>
+</properties>
+</profile>
+</profiles>
 
     <dependencies>
         <dependency>
